Added documentation . Refactoring